Add splashscreen, icon, and refactor for homepage

--- a/app/views/application.xml
+++ b/app/views/application.xml
@@ -20,6 +20,7 @@
 	-->
 		<Window class="container" id="applicationWindow">
 			<Require src="headerViewWindow" />
+		<!--	<Require src="columns"> -->
 		</Window>
 		
 </Alloy>
