--- a/app/views/application.xml
+++ b/app/views/application.xml
@@ -1,26 +1,26 @@
 <Alloy>
-	<!--	<TabGroup id="tab">
-			<Tab title="Home" icon="images/light_home@2x.png" id="tab1">
+		<TabGroup id="tab" tabsBackgroundColor="black" tabsBackgroundImage="none">
+			<Tab id="homeTab">
 				<Require type="view" src="allColumns" id="allColumnsTab"/>	
 			</Tab>
-			<Tab title="Skimber !" icon="images/light_list@2x.png">
+			<Tab id="skimberTab">
 				<Window id="skimber" title="Tab 2">
 					<Label>I am Window 2</Label>
 				</Window>
 			</Tab>
-			<Tab title="Add column" icon="images/light_list---add@2x.png">
+			<Tab id="addColumnTab">
 				<Window id="addColumn">
 				</Window>
 			</Tab>
-			<Tab title="Settings" icon="images/light_gears@2x.png">
+			<Tab id="settingsTab">
 				<Window id="settings">
 				</Window>
 			</Tab>
 		</TabGroup>
-	-->
-		<Window class="container" id="applicationWindow">
+
+		<!-- <Window class="container" id="applicationWindow">
 			<Require src="headerViewWindow" />
-		<!--	<Require src="columns"> -->
-		</Window>
+			<Require src="columns">
+		</Window> -->
 		
 </Alloy>
